refactor: use static factory method in ScreeningDto